fix: some spacing changes

--- a/electron/launcher/src/App.scss
+++ b/electron/launcher/src/App.scss
@@ -97,7 +97,7 @@ h1{
   font-size: 1.125rem;
   text-decoration: none;
   * {
-    margin-right: 0.5rem;
+    margin-right: 1rem;
   }
 
   &__link {
